fixed format of text alignment (center to left) for publication description

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -644,6 +644,10 @@ footer {
         color: $heading;
         margin-bottom: 50px;
     }
+
+    ul {
+        text-align: left;
+    }
 }
 
 .project {
